testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport4.errors.txt
lateBoundAssignmentDeclarationSupport4.js(5,10): error TS2300: Duplicate identifier 'F'.
lateBoundAssignmentDeclarationSupport4.js(9,15): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
lateBoundAssignmentDeclarationSupport4.js(12,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
lateBoundAssignmentDeclarationSupport4.js(12,16): error TS2300: Duplicate identifier 'F'.
lateBoundAssignmentDeclarationSupport4.js(13,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
usage.js(2,15): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport4.js");
    const inst =  new x.F();
                  ~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const y = inst["my-fake-sym"];
    const z = inst[x.S];
    
==== lateBoundAssignmentDeclarationSupport4.js (5 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
             ~
!!! error TS2300: Duplicate identifier 'F'.
    }
    F.prototype[_sym] = "ok";
    F.prototype[_str] = "ok";
    const inst =  new F();
                  ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const _y = inst[_str];
    const _z = inst[_sym];
    module.exports.F = F;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                   ~
!!! error TS2300: Duplicate identifier 'F'.
    module.exports.S = _sym;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.